# pick_and_place_elephantrobotics_Mycobot280pi_ROS2

./: .gitignore  01_NODECOMMUNICATIONS.md  01_NODE_COMMUNICATION.md  02_INTERFACES.md  03_PACKAGES.md  A0_DIARY_NGEBUILD.md  A1_TLDR_QUIRKS.md  GW LAPER.md  README.md  SEED.md  commands tools gg.txt  controllergui_code.txt  executor.txt  executor_code.txt  guigui_code.txt  guiros_code.txt  interfaces_code.txt  planner.txt  planner_code.txt  plannersync_code.txt  progress_cookiecrumbs.md  robot.txt  robot_code.txt  toolngeconcat.py
TEMPLATEAN_README/: README_gui_pkg.md  README_interface_pkg.md  README_planner_pkg.md  README_robot_pkg.md  README_vision_pkg_vun.md
src/: README_gui_pkg.md
src/GUI_barebone_and_monitoring/mycobot_executor/: package.xml  setup.cfg  setup.py
src/GUI_barebone_and_monitoring/mycobot_gui/: package.xml  setup.cfg  setup.py
src/mycobot280pi_dummy/: package.xml  setup.cfg  setup.py
src/mycobot280pi_gui/: package.xml  setup.cfg  setup.py
src/mycobot280pi_interfaces/: CMakeLists.txt  package.xml
src/mycobot280pi_interfaces/action/: ProcessWorkspace.action  SimpleCommandsAction.action
src/mycobot280pi_interfaces/msg/: JointAnglesArray.msg  ManyDetectedObjects.msg  OneDetectedObject.msg  Point2D.msg  Point2DArray.msg  SimpleCommands.msg
src/mycobot280pi_interfaces/srv/: Mycobot280PiSetCoordsMadeSure.srv  Mycobot280PiSimpleCommandsMadeSure.srv
src/mycobot280pi_planner/: package.xml  setup.cfg  setup.py
src/mycobot280pi_robot/: package.xml  setup.cfg  setup.py
src/mycobot280pi_urdf/: package.xml  setup.cfg  setup.py
src/mycobot280pi_vision/: package.xml  setup.cfg  setup.py
src/mycobot_rasppigpio_interfaces/: CMakeLists.txt  package.xml
(+161 files in other folders)
